# ytcomment_mcp

./: .gitignore  CLAUDE.md  README.md  data_analysis_report.md  pyproject.toml  test_replies.py  test_server.py  test_tokens.py  test_top_likes.py  test_youtube_data.py  wrangler.toml
deploy/: README.md  vps-deploy.sh  ytcomment-mcp.service
docs/: deployment.md  remote_mcp_hints_javascript.md
src/: __init__.py  cloudflare_worker.py  http_server.py  server.py
src/models/: __init__.py  youtube.py
src/tools/: __init__.py  youtube_comments.py
