[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ytcomment-mcp"
version = "0.1.0"
description = "YouTube Comment Downloader MCP Server"
authors = [{name = "Chad Kunsman"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.2.0",
    "youtube-comment-downloader",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
ytcomment-server = "src.server:main"